# WindiertRust

./: .gitignore  Cargo.toml  README.md
crates/demo-conn-monitor/: Cargo.toml
crates/demo-conn-monitor/src/: main.rs
crates/demo-dns-redirect/: Cargo.toml
crates/demo-dns-redirect/src/: main.rs
crates/wd-cli/: Cargo.toml
crates/wd-cli/src/: error.rs  fixtures.rs  lib.rs  main.rs  output.rs  runtime.rs
crates/wd-cli/tests/: cli.rs  commands.rs  runtime_errors.rs
crates/wd-driver-shared/: Cargo.toml
crates/wd-driver-shared/src/: lib.rs
crates/wd-driver-shared/tests/: layout.rs
crates/wd-filter/: Cargo.toml
crates/wd-filter/src/: ir.rs  lexer.rs  lib.rs  parser.rs  semantics.rs
crates/wd-filter/tests/: compile.rs
crates/wd-proto/: Cargo.toml
crates/wd-proto/src/: lib.rs
crates/wd-proto/tests/: protocol.rs
crates/wd-user/: Cargo.toml
crates/wd-user/src/: checksum.rs  device.rs  error.rs  frame.rs  handle.rs  lib.rs  runtime.rs  test_support.rs  windows.rs
crates/wd-user/tests/: runtime.rs  user_api.rs
driver/glue/: KMDF-bridge-notes.md  README.md  build.ps1  build_host_smoke.ps1  verify_host_smoke_build.ps1  verify_kmdf_skeleton_assets.ps1  verify_staged_assets.ps1  wd-rust-x64.inf  wd-rust-x86.inf  wd_device_add_template.c  wd_driver_entry_template.c  wd_file_context_template.h  wd_kmdf_bridge.c  wd_kmdf_bridge.h  wd_kmdf_evtio_template.c  wd_ntstatus_mapping.h  wd_queue_template.c  wd_runtime_host_smoke.c
driver/wd-kmdf/: Cargo.toml
driver/wd-kmdf-core/: Cargo.toml
driver/wd-kmdf/src/: filter_eval.rs  glue_api.rs  ioctl_dispatch.rs  lib.rs  network_runtime.rs  queue.rs  reinject.rs  runtime_device.rs  state.rs
driver/wd-kmdf/tests/: ffi_bridge.rs  filter_eval.rs  glue_api.rs  ioctl_dispatch.rs  network_runtime.rs  queue.rs  reinject.rs  runtime_device.rs  state_machine.rs
openspec/specs/: architecture-spec.md  cli-spec.md  filter-spec.md  protocol-spec.md
tests/windows/: five_layer_observe.ps1  network_reinject.ps1  open_close.ps1
(+27 files in other folders)
